Delete button visible to admins and some bug fixing

--- a/public/content/css/app.styl
+++ b/public/content/css/app.styl
@@ -8,3 +8,6 @@
 
 .search-result
   margin-top 5%
+
+.admin-delete-button
+  margin-bottom 5%
